src/camera_control.rs


    // ========================================================================
    // Part 4: 读写寄存器内存接口
    // ========================================================================

    /// 读内存
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pBuffer` - 作为返回值使用，保存读到的内存值（输出参数）
    /// * `nAddress` - 待读取的内存地址，该地址可以从设备的 Camera.xml 文件中获取
    /// * `nLength` - 待读取的内存长度
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 访问设备，读取某段寄存器的数据。
    /// GEV 设备内存值是按照大端模式存储的，采集卡设备和采集卡下相机按照大端存储，
    /// 其它协议设备按照小端存储
    pub unsafe fn MV_CC_ReadMemory(
        handle: *mut c_void,
        pBuffer: *mut c_void,
        nAddress: i64,
        nLength: i64,
    ) -> c_int;

    /// 写内存
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pBuffer` - 待写入的内存值
    /// * `nAddress` - 待写入的内存地址，该地址可以从设备的 Camera.xml 文件中获取
    /// * `nLength` - 待写入的内存长度
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 访问设备，把一段数据写入某段寄存器。
    /// 注意 GEV 设备内存值要按照大端模式存储，采集卡设备和采集卡下相机按照大端存储，
    /// 其它协议设备按照小端存储
    pub unsafe fn MV_CC_WriteMemory(
        handle: *mut c_void,
        pBuffer: *const c_void,
        nAddress: i64,
        nLength: i64,
    ) -> c_int;

    /// 清除 GenICam 节点缓存
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_InvalidateNodes(handle: *mut c_void) -> c_int;

    /// 获取设备属性树 XML
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pData` - XML 数据接收缓存（输出参数）
    /// * `nDataSize` - 接收缓存大小
    /// * `pnDataLen` - 实际数据大小（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 当 pData 为 NULL 或 nDataSize 比实际的 xml 文件小时，不拷贝数据，由 pnDataLen 返回 xml 文件大小。
    /// 当 pData 为有效缓存地址，且缓存足够大时，拷贝完整数据保存在该缓存里面，并由 pnDataLen 返回 xml 文件实际大小。
    pub unsafe fn MV_XML_GetGenICamXML(
        handle: *mut c_void,
        pData: *mut c_uchar,
        nDataSize: c_uint,
        pnDataLen: *mut c_uint,
    ) -> c_int;

    /// 获得当前节点的访问模式
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strName` - 节点名称
    /// * `penAccessMode` - 节点的访问模式（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_XML_GetNodeAccessMode(
        handle: *mut c_void,
        strName: *const c_char,
        penAccessMode: *mut crate::MV_XML_AccessMode,
    ) -> c_int;

    /// 获得当前节点的类型
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strName` - 节点名称
    /// * `penInterfaceType` - 节点的类型（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口可以在调用万能接口之前，提前知道节点类型，
    /// 方便用户选择合适的万能接口进行节点值的设置和获取
    pub unsafe fn MV_XML_GetNodeInterfaceType(
        handle: *mut c_void,
        strName: *const c_char,
        penInterfaceType: *mut MV_XML_InterfaceType,
    ) -> c_int;

    /// 保存设备属性
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strFileName` - 属性文件名
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_FeatureSave(handle: *mut c_void, strFileName: *const c_char) -> c_int;

    /// 导入设备属性
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strFileName` - 属性文件名
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_FeatureLoad(handle: *mut c_void, strFileName: *const c_char) -> c_int;

    /// 导入设备属性并保存错误信息列表
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `strFileName` - 属性文件名
    /// * `pstNodeErrorList` - 错误信息列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 部分节点导入失败时，接口返回 MV_OK，通过错误信息列表中 stNodeError 获取出错节点及失败原因
    pub unsafe fn MV_CC_FeatureLoadEx(
        handle: *mut c_void,
        strFileName: *const c_char,
        pstNodeErrorList: *mut crate::MVCC_NODE_ERROR_LIST,
    ) -> c_int;

    /// 从设备读取文件
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pstFileAccess` - 文件存取结构体
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_FileAccessRead(
        handle: *mut c_void,
        pstFileAccess: *mut crate::MV_CC_FILE_ACCESS,
    ) -> c_int;

    /// 从设备读取文件，文件是 Data 数据
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pstFileAccess` - 文件存取结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 避免文件操作权限问题读失败
    pub unsafe fn MV_CC_FileAccessReadEx(
        handle: *mut c_void,
        pstFileAccess: *mut crate::MV_CC_FILE_ACCESS_EX,
    ) -> c_int;

    /// 将文件写入设备
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pstFileAccess` - 文件存取结构体
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_FileAccessWrite(
        handle: *mut c_void,
        pstFileAccess: *mut crate::MV_CC_FILE_ACCESS,
    ) -> c_int;

    /// 将缓存 (buffer) 写入设备
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pstFileAccessEx` - 文件存取结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口直接使用缓存数据，进行读写操作，避免直接操作文件出现无权限的问题，
    /// 是 MV_CC_FileAccessWrite 的扩展接口
    pub unsafe fn MV_CC_FileAccessWriteEx(
        handle: *mut c_void,
        pstFileAccessEx: *mut crate::MV_CC_FILE_ACCESS_EX,
    ) -> c_int;

    /// 获取文件存取的进度
    ///
    /// # 参数
    /// * `handle` - 设备句柄/采集卡句柄
    /// * `pstFileAccessProgress` - 进度内容（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码（当前文件存取的状态）
    pub unsafe fn MV_CC_GetFileAccessProgress(
        handle: *mut c_void,
        pstFileAccessProgress: *mut crate::MV_CC_FILE_ACCESS_PROGRESS,
    ) -> c_int;

    // ========================================================================
    // Part 5: 相机和采集卡升级
    // ========================================================================

    /// 设备本地升级
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `strFilePathName` - 文件名
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口可以将升级固件文件发送给设备进行升级。
    /// 该接口需要等待升级固件文件成功传给设备端之后再返回，响应时间可能较长。
    pub unsafe fn MV_CC_LocalUpgrade(handle: *mut c_void, strFilePathName: *const c_void) -> c_int;

    /// 获取升级进度
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnProcess` - 进度接收地址（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_GetUpgradeProcess(handle: *mut c_void, pnProcess: *mut c_uint) -> c_int;

    // ========================================================================
    // Part 6: 相机和采集卡注册异常回调和事件接口
    // ========================================================================

    /// 注册异常消息回调，在打开设备之后调用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `cbException` - 异常回调函数指针
    /// * `pUser` - 用户自定义变量
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口需要在 MV_CC_OpenDevice 打开设备之后调用。
    /// 设备异常断开连接后可以在回调里面获取到异常消息，
    /// GigE 设备掉线之后需要先调用 MV_CC_CloseDevice 接口关闭设备，
    /// 再调用 MV_CC_OpenDevice 接口重新打开设备。
    pub unsafe fn MV_CC_RegisterExceptionCallBack(
        handle: *mut c_void,
        cbException: unsafe extern "C" fn(c_uint, *mut c_void),
        pUser: *mut c_void,
    ) -> c_int;

    /// 注册全部事件回调，在打开设备之后调用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `cbEvent` - 事件回调函数指针
    /// * `pUser` - 用户自定义变量
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口设置事件回调，可以在回调函数里面获取采集、曝光等事件信息。
    /// 该接口不支持 CameraLink 设备。
    pub unsafe fn MV_CC_RegisterAllEventCallBack(
        handle: *mut c_void,
        cbEvent: unsafe extern "C" fn(*mut crate::MV_EVENT_OUT_INFO, *mut c_void),
        pUser: *mut c_void,
    ) -> c_int;

    /// 注册单个事件回调，在打开设备之后调用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `strEventName` - 事件名称
    /// * `cbEvent` - 事件回调函数指针
    /// * `pUser` - 用户自定义变量
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口设置事件回调，可以在回调函数里面获取采集、曝光等事件信息。
    /// 该接口不支持 CameraLink 设备。
    pub unsafe fn MV_CC_RegisterEventCallBackEx(
        handle: *mut c_void,
        strEventName: *const c_char,
        cbEvent: unsafe extern "C" fn(*mut crate::MV_EVENT_OUT_INFO, *mut c_void),
        pUser: *mut c_void,
    ) -> c_int;

    /// 开启设备指定事件
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `strEventName` - 事件名称
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_EventNotificationOn(
        handle: *mut c_void,
        strEventName: *const c_char,
    ) -> c_int;

    /// 关闭设备指定事件
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `strEventName` - 事件名称
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_EventNotificationOff(
        handle: *mut c_void,
        strEventName: *const c_char,
    ) -> c_int;

    // ========================================================================
    // Part 7: 仅 GigE 设备支持的接口
    // ========================================================================

    /// 设置枚举超时时间，仅支持 GigE 协议，范围:[1, UINT_MAX)
    ///
    /// # 参数
    /// * `nMilTimeout` - 超时时间，应为无符号整数，默认 100ms
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 在调用 MV_CC_EnumDevices 等枚举接口前使用该接口，可设置枚举GIGE设备的网卡最大超时时间（默认 100ms），
    /// 可以减少最大超时时间，来加快枚举GIGE设备的速度。
    ///
    /// 仅支持 GigEVision 设备。
    pub unsafe fn MV_GIGE_SetEnumDevTimeout(nMilTimeout: c_uint) -> c_int;

    /// 强制 IP
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nIP` - 设置的 IP
    /// * `nSubNetMask` - 子网掩码
    /// * `nDefaultGateWay` - 默认网关
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 强制设置设备网络参数（包括 IP、子网掩码、默认网关），
    /// 强制设置之后将需要重新创建设备句柄，
    /// 支持 GigEVision(MV_GIGE_DEVICE) 设备和 GenTL(MV_GENTL_GIGE_DEVICE) 设备。
    ///
    /// 如果设备为 DHCP 的状态，调用该接口强制设置设备网络参数之后设备将会重启。
    pub unsafe fn MV_GIGE_ForceIpEx(
        handle: *mut c_void,
        nIP: c_uint,
        nSubNetMask: c_uint,
        nDefaultGateWay: c_uint,
    ) -> c_int;

    /// 配置 IP 方式
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nType` - IP 类型，见 MV_IP_CFG_x
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 发送命令设置设备的 IP 方式，如 DHCP、LLA 等，
    /// 仅支持 GigEVision(MV_GIGE_DEVICE) 和 GenTl(MV_GENTL_GIGE_DEVICE) 的设备。
    pub unsafe fn MV_GIGE_SetIpConfig(handle: *mut c_void, nType: c_uint) -> c_int;

    /// 设置仅使用某种模式，type: MV_NET_TRANS_x，不设置时，默认优先使用 driver
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nType` - 网络传输模式，见 MV_NET_TRANS_x
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口可以设置 SDK 内部优先使用的网络模式，默认优先使用驱动模式，
    /// 仅 GigEVision 设备支持。
    pub unsafe fn MV_GIGE_SetNetTransMode(handle: *mut c_void, nType: c_uint) -> c_int;

    /// 获取网络传输信息
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstInfo` - 信息结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口可以获取网络传输相关信息，包括已接收数据大小、丢帧数量等，
    /// 在 MV_CC_StartGrabbing 开启采集之后调用。
    /// 仅 GigEVision 设备支持。
    pub unsafe fn MV_GIGE_GetNetTransInfo(
        handle: *mut c_void,
        pstInfo: *mut crate::MV_NETTRANS_INFO,
    ) -> c_int;

    /// 设置枚举命令的回复包类型
    ///
    /// # 参数
    /// * `nMode` - 回复包类型（默认广播），0-单播，1-广播
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口只对 GigE 相机有效
    pub unsafe fn MV_GIGE_SetDiscoveryMode(nMode: c_uint) -> c_int;

    /// 设置 GVSP 取流超时时间
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nMillisec` - 超时时间，默认 300ms，范围:[10 - UINT_MAX)
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 连接设备之后，取流动作发生前，调用该接口可以设置 GVSP 取流超时时间。
    /// GVSP 取流超时设置过短可能造成图像异常，设置过长可能造成取流时间变长。
    pub unsafe fn MV_GIGE_SetGvspTimeout(handle: *mut c_void, nMillisec: c_uint) -> c_int;

    /// 获取 GVSP 取流超时时间
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnMillisec` - 超时时间指针，以毫秒为单位（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口用于获取当前的 GVSP 取流超时时间
    pub unsafe fn MV_GIGE_GetGvspTimeout(handle: *mut c_void, pnMillisec: *mut c_uint) -> c_int;
